Added gulp build and clean tasks, moved tw to source/

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/bnb/tw-to-gh-pages-mvp#readme",
   "dependencies": {
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-gh-pages": "^0.5.4"
   }
